--- a/.hintrc
+++ b/.hintrc
@@ -21,6 +21,17 @@
         "aria-progressbar-name": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-text-size-adjust",
+          "text-align: -webkit-match-parent",
+          "color-adjust",
+          "-webkit-overflow-scrolling"
+        ]
+      }
+    ]
   }
 }
