--- a/.hintrc
+++ b/.hintrc
@@ -18,7 +18,8 @@
     "axe/aria": [
       "default",
       {
-        "aria-progressbar-name": "off"
+        "aria-progressbar-name": "off",
+        "aria-valid-attr-value": "off"
       }
     ],
     "no-inline-styles": "off",
