--- a/.hintrc
+++ b/.hintrc
@@ -3,38 +3,6 @@
     "development"
   ],
   "hints": {
-    "axe/name-role-value": [
-      "default",
-      {
-        "button-name": "off"
-      }
-    ],
-    "axe/forms": [
-      "default",
-      {
-        "select-name": "off"
-      }
-    ],
-    "axe/aria": [
-      "default",
-      {
-        "aria-progressbar-name": "off",
-        "aria-valid-attr-value": "off"
-      }
-    ],
-    "no-inline-styles": "off",
-    "compat-api/css": [
-      "default",
-      {
-        "ignore": [
-          "-webkit-text-size-adjust",
-          "text-align: -webkit-match-parent",
-          "color-adjust",
-          "-webkit-overflow-scrolling"
-        ]
-      }
-    ],
-    "disown-opener": "off",
-    "button-type": "off"
+    "no-inline-styles": "off"
   }
 }
