--- a/.hintrc
+++ b/.hintrc
@@ -28,6 +28,14 @@
       {
         "aria-required-children": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "text-size-adjust"
+        ]
+      }
     ]
   }
 }
