--- a/.hintrc
+++ b/.hintrc
@@ -26,7 +26,8 @@
     "axe/aria": [
       "default",
       {
-        "aria-required-children": "off"
+        "aria-required-children": "off",
+        "empty-table-header": "off"
       }
     ],
     "compat-api/css": [
