--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,17 @@
 {
   "cSpell.words": [
+    "автоматически",
+    "Автор",
     "адаптивные",
     "берут",
     "больших",
     "Бренд",
+    "будет",
+    "быть",
     "ведущую",
+    "виде",
+    "внутри",
+    "всегда",
     "вспомогательных",
     "вставьте",
     "выберите",
@@ -16,26 +23,36 @@
     "выравнивания",
     "выше",
     "гамбургера",
+    "Главная",
     "Группа",
     "Группы",
+    "Груши",
     "действие",
     "действовало",
+    "Диксон",
     "добавить",
+    "добавляет",
     "добавьте",
     "Документ",
     "Документация",
+    "должны",
     "других",
     "Другое",
     "заголовке",
     "Заключите",
     "значений",
     "Значки",
+    "идеей",
+    "идущего",
+    "Изменение",
+    "изменить",
     "Изображения",
     "Иконки",
     "имена",
     "использовать",
     "используйте",
     "каждого",
+    "каждому",
     "Карточки",
     "Карусель",
     "качестве",
@@ -47,7 +64,9 @@
     "кнопок",
     "конкретной",
     "Контейнеры",
+    "которой",
     "который",
+    "крошек",
     "крошки",
     "легко",
     "Лого",
@@ -61,13 +80,17 @@
     "навигацию",
     "Навигация",
     "наиболее",
+    "налево",
     "например",
+    "находится",
     "Начало",
     "небольших",
+    "необходимости",
     "области",
     "оболочка",
     "объявления",
     "объяснение",
+    "обязательно",
     "окна",
     "определённых",
     "определить",
@@ -75,17 +98,30 @@
     "отдельного",
     "отдельных",
     "отметить",
+    "отображает",
     "отображения",
     "Пагинация",
     "панели",
     "панель",
+    "перевернуть",
     "Переключатель",
     "Переключать",
     "переключений",
+    "переменной",
     "подходящего",
     "позволяет",
+    "показывает",
     "полей",
     "полный",
+    "получается",
+    "пользователь",
+    "пользовательского",
+    "поменять",
+    "поместить",
+    "Последнее",
+    "последний",
+    "почти",
+    "предлагает",
     "предназначенных",
     "Предыдущий",
     "примените",
@@ -96,12 +132,18 @@
     "просмотра",
     "простая",
     "Просто",
+    "пункт",
     "работы",
     "раздел",
+    "разделители",
+    "разделитель",
+    "разделителя",
     "размерах",
     "размещения",
     "разработчик",
+    "результате",
     "свойств",
+    "свойства",
     "Сворачиваемое",
     "свою",
     "сеток",
@@ -111,20 +153,25 @@
     "Содержание",
     "содержимое",
     "содержит",
+    "создания",
     "сокращения",
     "сообщить",
     "списков",
+    "списку",
     "список",
+    "справа",
     "справочника",
     "Ссылка",
     "Ссылки",
     "ссылку",
     "ссылок",
+    "стилизует",
     "стиля",
     "страница",
     "страницу",
     "схему",
     "также",
+    "таком",
     "Текущая",
     "текущую",
     "Типографика",
@@ -135,13 +182,18 @@
     "фирменного",
     "Флекс",
     "флексов",
+    "Фрукты",
     "Хлебные",
+    "хлебных",
+    "Хорошей",
     "цветовую",
     "читалкам",
     "чтобы",
     "экранным",
     "элемента",
     "элементе",
+    "элементу",
+    "эффект",
     "Borge",
     "brdc",
     "Egil",
