--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,54 +3,111 @@
     "автоматически",
     "Автор",
     "адаптивные",
+    "Активное",
+    "атрибут",
+    "атрибутом",
     "берут",
+    "блока",
+    "более",
+    "больше",
     "больших",
     "Бренд",
     "будет",
     "быть",
     "ведущую",
     "виде",
+    "вместе",
     "внутри",
+    "возможность",
+    "вперёд",
+    "время",
     "всегда",
+    "всех",
     "вспомогательных",
     "вставьте",
+    "всякий",
+    "Вторичное",
     "выберите",
+    "выдают",
+    "выделена",
+    "выделения",
     "выпадающего",
     "Выпадающее",
     "Выпадающие",
     "выпадающим",
+    "выполнить",
+    "выполняет",
     "Выравнивание",
     "выравнивания",
     "выше",
     "гамбургера",
     "Главная",
+    "гораздо",
+    "готовы",
     "Группа",
     "Группы",
     "Груши",
+    "даже",
+    "данный",
     "действие",
     "действовало",
+    "делает",
+    "делать",
+    "диалоговое",
+    "диалоговом",
     "Диксон",
+    "добавив",
     "добавить",
+    "добавляемой",
     "добавляет",
     "добавьте",
     "Документ",
+    "документации",
     "Документация",
+    "должно",
     "должны",
+    "дополнительной",
+    "доступны",
+    "другими",
     "других",
     "Другое",
+    "есть",
+    "завязали",
     "заголовке",
+    "Заголовок",
+    "заключено",
     "Заключите",
+    "закругленными",
+    "Закрываемые",
+    "закрываться",
+    "закрытии",
+    "закрытия",
+    "Закрыть",
+    "заставляет",
+    "затемнена",
+    "Здесь",
     "значений",
     "Значки",
+    "значков",
+    "значок",
     "идеей",
     "идущего",
+    "избавиться",
     "Изменение",
+    "изменения",
     "изменить",
     "Изображения",
     "Иконки",
     "имена",
+    "именно",
+    "Инфо",
+    "информации",
+    "Информационное",
     "использовать",
+    "используется",
     "используйте",
+    "используя",
+    "исчезновения",
     "каждого",
     "каждому",
     "Карточки",
@@ -58,27 +115,45 @@
     "качестве",
     "класс",
     "класса",
+    "классами",
     "классов",
     "классом",
     "классы",
+    "кнопке",
+    "кнопку",
     "кнопок",
+    "когда",
+    "компонента",
     "конкретной",
     "Контейнеры",
+    "Контекстные",
+    "контекстных",
+    "которая",
+    "которое",
     "которой",
     "который",
+    "Кроме",
     "крошек",
     "крошки",
+    "лёгкий",
     "легко",
     "Лого",
     "Логотип",
     "любой",
     "меню",
+    "много",
+    "модального",
+    "модальное",
     "Модальные",
+    "модальными",
     "можете",
+    "момент",
     "навигации",
     "навигационном",
     "навигацию",
     "Навигация",
+    "название",
+    "назначение",
     "наиболее",
     "налево",
     "например",
@@ -86,114 +161,221 @@
     "Начало",
     "небольших",
     "необходимости",
+    "нескольким",
+    "несколько",
+    "Новое",
+    "нумерацией",
+    "нумерацию",
+    "обещает",
     "области",
     "оболочка",
     "объявления",
     "объяснение",
+    "обычно",
     "обязательно",
+    "один",
     "окна",
+    "окнами",
+    "окне",
+    "окно",
+    "опасности",
+    "Опасность",
+    "описание",
+    "определения",
     "определённых",
     "определить",
     "Основная",
+    "Основное",
+    "Основной",
+    "остальная",
     "отдельного",
     "отдельных",
+    "Отключение",
+    "отключить",
+    "Открыть",
     "отметить",
     "отображает",
     "отображения",
+    "отражающим",
+    "пагинации",
+    "пагинацию",
     "Пагинация",
     "панели",
     "панель",
     "перевернуть",
+    "перейти",
     "Переключатель",
     "Переключать",
     "переключений",
     "переменной",
+    "перескочить",
+    "плавного",
+    "поведения",
+    "Подробное",
     "подходящего",
     "позволяет",
+    "Поздравляем",
+    "поиска",
+    "показано",
     "показывает",
     "полей",
     "полный",
+    "получает",
     "получается",
     "пользователь",
     "пользовательского",
+    "пользователю",
+    "пользователя",
     "поменять",
     "поместить",
+    "Понятно",
     "Последнее",
     "последний",
     "почти",
+    "появления",
+    "правильного",
+    "пределами",
     "предлагает",
     "предназначенных",
+    "представляющему",
+    "Предупреждение",
+    "предупреждением",
+    "Предыдущая",
+    "предыдущем",
     "Предыдущий",
+    "прежде",
+    "придать",
     "примените",
     "применяет",
     "Пример",
+    "примере",
     "Примеры",
     "Прогресс",
+    "продолжить",
     "просмотра",
     "простая",
     "Просто",
+    "простой",
     "пункт",
+    "пункта",
     "работы",
     "раздел",
+    "раздела",
     "разделители",
     "разделитель",
     "разделителя",
+    "Размер",
     "размерах",
     "размещения",
     "разработчик",
+    "результатах",
     "результате",
+    "Светлое",
+    "Светлый",
     "свойств",
     "свойства",
     "Сворачиваемое",
     "свою",
+    "сделав",
+    "Сделайте",
+    "семантического",
+    "серии",
+    "серым",
+    "Сетки",
     "сеток",
     "Система",
     "ситуации",
+    "Следующая",
+    "следующее",
+    "следующие",
     "Следующий",
+    "следующим",
+    "следующую",
+    "Смотрите",
+    "совпадал",
     "Содержание",
     "содержимое",
     "содержит",
+    "создаём",
     "создания",
+    "создать",
     "сокращения",
     "сообщить",
+    "состояние",
+    "Сохранить",
+    "специального",
     "списков",
     "списку",
     "список",
+    "способ",
     "справа",
     "справочника",
     "Ссылка",
+    "ссылками",
     "Ссылки",
     "ссылку",
     "ссылок",
+    "Статичный",
+    "стилизованного",
     "стилизует",
     "стиля",
+    "страниц",
     "страница",
     "страницу",
+    "страницы",
+    "строке",
     "схему",
+    "таблетки",
     "также",
     "таком",
+    "теге",
+    "текстовой",
     "Текущая",
+    "текущей",
     "текущую",
+    "Тёмное",
+    "Тёмный",
+    "Теперь",
     "Типографика",
     "только",
+    "убрать",
+    "уведомление",
     "Уведомления",
+    "уведомлениям",
+    "увеличить",
+    "углы",
+    "Удаление",
+    "удалить",
+    "уменьшить",
+    "умолчанию",
+    "управления",
+    "Успех",
+    "успехе",
+    "успешно",
     "устройствах",
     "фактического",
     "фирменного",
     "Флекс",
     "флексов",
+    "фокус",
     "Фрукты",
     "Хлебные",
     "хлебных",
     "Хорошей",
     "цветовую",
+    "часть",
     "читалкам",
     "чтобы",
+    "шнуркам",
+    "шнурки",
+    "щёлкает",
+    "экрана",
     "экранным",
     "элемента",
     "элементе",
     "элементу",
     "эффект",
+    "эффекта",
     "Borge",
     "brdc",
     "Egil",
