--- a/.hintrc
+++ b/.hintrc
@@ -52,7 +52,8 @@
     "axe/parsing": [
       "default",
       {
-        "duplicate-id": "off"
+        "duplicate-id": "off",
+        "duplicate-id-active": "off"
       }
     ],
     "axe/keyboard": [
