--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "Автор",
     "адаптивные",
     "Активное",
+    "Анимированные",
+    "анимировать",
     "атрибут",
     "атрибутом",
     "берут",
@@ -16,6 +18,7 @@
     "быть",
     "ведущую",
     "виде",
+    "вложенным",
     "вместе",
     "внутри",
     "возможность",
@@ -35,21 +38,27 @@
     "Выпадающее",
     "Выпадающие",
     "выпадающим",
+    "выполнения",
+    "выполнено",
     "выполнить",
     "выполняет",
     "Выравнивание",
     "выравнивания",
+    "Выровнять",
     "выше",
     "гамбургера",
     "Главная",
     "гораздо",
     "готовы",
     "Группа",
+    "группу",
     "Группы",
     "Груши",
     "даже",
     "данный",
     "действие",
+    "действий",
+    "действия",
     "действовало",
     "делает",
     "делать",
@@ -67,6 +76,7 @@
     "должно",
     "должны",
     "дополнительной",
+    "дополнительную",
     "доступны",
     "другими",
     "других",
@@ -100,10 +110,12 @@
     "Иконки",
     "имена",
     "именно",
+    "иного",
     "Инфо",
     "информации",
     "Информационное",
     "использовать",
+    "использует",
     "используется",
     "используйте",
     "используя",
@@ -123,7 +135,9 @@
     "кнопку",
     "кнопок",
     "когда",
+    "компонент",
     "компонента",
+    "компоновать",
     "конкретной",
     "Контейнеры",
     "Контекстные",
@@ -140,8 +154,11 @@
     "Лого",
     "Логотип",
     "любой",
+    "мгновенно",
     "меню",
+    "метки",
     "много",
+    "могут",
     "модального",
     "модальное",
     "Модальные",
@@ -160,15 +177,20 @@
     "находится",
     "Начало",
     "небольших",
+    "него",
     "необходимости",
     "нескольким",
     "несколько",
+    "неупорядоченные",
+    "ними",
     "Новое",
     "нумерацией",
     "нумерацию",
+    "обеспечить",
     "обещает",
     "области",
     "оболочка",
+    "образом",
     "объявления",
     "объяснение",
     "обычно",
@@ -182,21 +204,25 @@
     "Опасность",
     "описание",
     "определения",
+    "определённым",
     "определённых",
     "определить",
     "Основная",
     "Основное",
     "Основной",
     "остальная",
+    "остальному",
     "отдельного",
     "отдельных",
     "Отключение",
     "отключить",
     "Открыть",
     "отметить",
+    "отношению",
     "отображает",
     "отображения",
     "отражающим",
+    "оформлением",
     "пагинации",
     "пагинацию",
     "Пагинация",
@@ -220,9 +246,12 @@
     "показывает",
     "полей",
     "полный",
+    "Полоски",
     "получает",
     "получается",
+    "Пользователи",
     "пользователь",
+    "пользовательским",
     "пользовательского",
     "пользователю",
     "пользователя",
@@ -232,12 +261,15 @@
     "Последнее",
     "последний",
     "почти",
+    "поэтому",
     "появления",
     "правильного",
     "пределами",
     "предлагает",
     "предназначенных",
+    "предоставления",
     "представляющему",
+    "предстоит",
     "Предупреждение",
     "предупреждением",
     "Предыдущая",
@@ -247,15 +279,19 @@
     "придать",
     "примените",
     "применяет",
+    "применяются",
     "Пример",
     "примере",
     "Примеры",
+    "проблемах",
     "Прогресс",
+    "прогресса",
     "продолжить",
     "просмотра",
     "простая",
     "Просто",
     "простой",
+    "процесса",
     "пункт",
     "пункта",
     "работы",
@@ -266,8 +302,10 @@
     "разделителя",
     "Размер",
     "размерах",
+    "размещать",
     "размещения",
     "разработчик",
+    "расшифровывается",
     "результатах",
     "результате",
     "Светлое",
@@ -278,6 +316,8 @@
     "свою",
     "сделав",
     "Сделайте",
+    "сделать",
+    "семантику",
     "семантического",
     "серии",
     "серым",
@@ -285,16 +325,20 @@
     "сеток",
     "Система",
     "ситуации",
+    "сколько",
     "Следующая",
     "следующее",
     "следующие",
     "Следующий",
     "следующим",
     "следующую",
+    "сложные",
     "Смотрите",
     "совпадал",
     "Содержание",
     "содержимое",
+    "содержимому",
+    "содержимым",
     "содержит",
     "создаём",
     "создания",
@@ -315,6 +359,7 @@
     "Ссылки",
     "ссылку",
     "ссылок",
+    "стандартную",
     "Статичный",
     "стилизованного",
     "стилизует",
@@ -326,16 +371,19 @@
     "строке",
     "схему",
     "таблетки",
+    "Такая",
     "также",
     "таком",
     "теге",
     "текстовой",
+    "текстовые",
     "Текущая",
     "текущей",
     "текущую",
     "Тёмное",
     "Тёмный",
     "Теперь",
+    "типа",
     "Типографика",
     "только",
     "убрать",
@@ -343,6 +391,8 @@
     "Уведомления",
     "уведомлениям",
     "увеличить",
+    "увидеть",
+    "увязая",
     "углы",
     "Удаление",
     "удалить",
@@ -352,6 +402,7 @@
     "Успех",
     "успехе",
     "успешно",
+    "установить",
     "устройствах",
     "фактического",
     "фирменного",
@@ -361,11 +412,17 @@
     "Фрукты",
     "Хлебные",
     "хлебных",
+    "ходе",
     "Хорошей",
+    "цвета",
     "цветовую",
     "часть",
     "читалкам",
     "чтобы",
+    "шкала",
+    "шкале",
+    "шкалу",
+    "шкалы",
     "шнуркам",
     "шнурки",
     "щёлкает",
