--- a/.hintrc
+++ b/.hintrc
@@ -28,7 +28,8 @@
       {
         "aria-required-children": "off",
         "empty-table-header": "off",
-        "aria-roles": "off"
+        "aria-roles": "off",
+        "aria-progressbar-name": "off"
       }
     ],
     "compat-api/css": [
