--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,11 @@
     "анимировать",
     "атрибут",
     "атрибутом",
+    "Базовая",
+    "базовую",
     "берут",
+    "Бесплатная",
+    "блеска",
     "блока",
     "более",
     "больше",
@@ -16,12 +20,19 @@
     "Бренд",
     "будет",
     "быть",
+    "вариантов",
     "ведущую",
+    "Верхний",
+    "вида",
     "виде",
     "вложенным",
     "вместе",
+    "внешнего",
     "внутри",
+    "водонепроницаемости",
     "возможность",
+    "восковая",
+    "восстановления",
     "вперёд",
     "время",
     "всегда",
@@ -77,13 +88,18 @@
     "должны",
     "дополнительной",
     "дополнительную",
+    "доставка",
+    "Доступно",
     "доступны",
     "другими",
     "других",
     "Другое",
     "есть",
+    "жидкость",
     "завязали",
+    "заголовка",
     "заголовке",
+    "заголовки",
     "Заголовок",
     "заключено",
     "Заключите",
@@ -115,6 +131,7 @@
     "информации",
     "Информационное",
     "использовать",
+    "используемая",
     "использует",
     "используется",
     "используйте",
@@ -122,7 +139,9 @@
     "исчезновения",
     "каждого",
     "каждому",
+    "Карточка",
     "Карточки",
+    "карточку",
     "Карусель",
     "качестве",
     "класс",
@@ -131,14 +150,20 @@
     "классов",
     "классом",
     "классы",
+    "клиентов",
     "кнопке",
     "кнопку",
     "кнопок",
     "когда",
+    "кожаным",
+    "колонтитул",
+    "колонтитулы",
     "компонент",
     "компонента",
     "компоновать",
     "конкретной",
+    "контейнер",
+    "контейнера",
     "Контейнеры",
     "Контекстные",
     "контекстных",
@@ -146,18 +171,25 @@
     "которое",
     "которой",
     "который",
+    "крем",
     "Кроме",
     "крошек",
     "крошки",
+    "круглосуточная",
     "лёгкий",
     "легко",
     "Лого",
     "Логотип",
+    "Лучшие",
+    "любое",
     "любой",
+    "любым",
     "мгновенно",
     "меню",
     "метки",
     "много",
+    "многое",
+    "множество",
     "могут",
     "модального",
     "модальное",
@@ -177,11 +209,13 @@
     "находится",
     "Начало",
     "небольших",
+    "небольшой",
     "него",
     "необходимости",
     "нескольким",
     "несколько",
     "неупорядоченные",
+    "нижний",
     "ними",
     "Новое",
     "нумерацией",
@@ -223,11 +257,13 @@
     "отображения",
     "отражающим",
     "оформлением",
+    "оформления",
     "пагинации",
     "пагинацию",
     "Пагинация",
     "панели",
     "панель",
+    "паста",
     "перевернуть",
     "перейти",
     "Переключатель",
@@ -237,6 +273,9 @@
     "перескочить",
     "плавного",
     "поведения",
+    "поддержания",
+    "поддержка",
+    "Подробнее",
     "Подробное",
     "подходящего",
     "позволяет",
@@ -245,6 +284,8 @@
     "показано",
     "показывает",
     "полей",
+    "полировки",
+    "Полироль",
     "полный",
     "Полоски",
     "получает",
@@ -255,6 +296,7 @@
     "пользовательского",
     "пользователю",
     "пользователя",
+    "поля",
     "поменять",
     "поместить",
     "Понятно",
@@ -264,6 +306,7 @@
     "поэтому",
     "появления",
     "правильного",
+    "практически",
     "пределами",
     "предлагает",
     "предназначенных",
@@ -276,6 +319,7 @@
     "предыдущем",
     "Предыдущий",
     "прежде",
+    "придания",
     "придать",
     "примените",
     "применяет",
@@ -286,6 +330,7 @@
     "проблемах",
     "Прогресс",
     "прогресса",
+    "продления",
     "продолжить",
     "просмотра",
     "простая",
@@ -308,6 +353,9 @@
     "расшифровывается",
     "результатах",
     "результате",
+    "сапог",
+    "сапогам",
+    "свете",
     "Светлое",
     "Светлый",
     "свойств",
@@ -333,6 +381,7 @@
     "следующим",
     "следующую",
     "сложные",
+    "службы",
     "Смотрите",
     "совпадал",
     "Содержание",
@@ -351,9 +400,11 @@
     "списков",
     "списку",
     "список",
+    "спонсора",
     "способ",
     "справа",
     "справочника",
+    "срока",
     "Ссылка",
     "ссылками",
     "Ссылки",
@@ -361,6 +412,7 @@
     "ссылок",
     "стандартную",
     "Статичный",
+    "стилизацией",
     "стилизованного",
     "стилизует",
     "стиля",
@@ -373,6 +425,7 @@
     "таблетки",
     "Такая",
     "также",
+    "таких",
     "таком",
     "теге",
     "текстовой",
@@ -386,6 +439,7 @@
     "типа",
     "Типографика",
     "только",
+    "туфлям",
     "убрать",
     "уведомление",
     "Уведомления",
@@ -393,9 +447,11 @@
     "увеличить",
     "увидеть",
     "увязая",
+    "Угги",
     "углы",
     "Удаление",
     "удалить",
+    "улучшения",
     "уменьшить",
     "умолчанию",
     "управления",
@@ -429,6 +485,7 @@
     "экрана",
     "экранным",
     "элемента",
+    "элементам",
     "элементе",
     "элементу",
     "эффект",
@@ -439,6 +496,7 @@
     "nextprev",
     "prcd",
     "Refsnes",
-    "Stepik"
+    "Stepik",
+    "uuuuggghhh"
   ]
 }
