--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,23 +19,39 @@
     "больших",
     "Бренд",
     "будет",
+    "Было",
     "быть",
     "вариантов",
     "ведущую",
+    "вернётся",
+    "вернулось",
+    "Верх",
+    "верхней",
+    "верхние",
     "Верхний",
+    "взошло",
     "вида",
     "виде",
+    "Вкладки",
+    "вкладок",
     "вложенным",
     "вместе",
+    "Вместо",
     "внешнего",
+    "внимание",
     "внутри",
+    "внутрь",
     "водонепроницаемости",
+    "возможно",
     "возможность",
+    "вопросам",
     "восковая",
     "восстановления",
     "вперёд",
     "время",
+    "вровень",
     "всегда",
+    "всем",
     "всех",
     "вспомогательных",
     "вставьте",
@@ -56,16 +72,21 @@
     "Выравнивание",
     "выравнивания",
     "Выровнять",
+    "выровняться",
+    "высотой",
     "выше",
     "гамбургера",
     "Главная",
     "гораздо",
+    "горизонтальное",
+    "горизонтом",
     "готовы",
     "Группа",
     "группу",
     "Группы",
     "Груши",
     "даже",
+    "дальше",
     "данный",
     "действие",
     "действий",
@@ -94,6 +115,7 @@
     "другими",
     "других",
     "Другое",
+    "Если",
     "есть",
     "жидкость",
     "завязали",
@@ -101,16 +123,21 @@
     "заголовке",
     "заголовки",
     "Заголовок",
+    "заката",
     "заключено",
     "Заключите",
+    "закруглённым",
     "закругленными",
     "Закрываемые",
     "закрываться",
     "закрытии",
     "закрытия",
     "Закрыть",
+    "Замёрзли",
+    "заполняют",
     "заставляет",
     "затемнена",
+    "зашло",
     "Здесь",
     "значений",
     "Значки",
@@ -122,24 +149,31 @@
     "Изменение",
     "изменения",
     "изменить",
+    "Изображение",
     "Изображения",
     "Иконки",
     "имена",
     "именно",
+    "Иногда",
     "иного",
     "Инфо",
     "информации",
     "Информационное",
+    "использовании",
     "использовать",
     "используемая",
     "использует",
     "используется",
     "используйте",
     "используя",
+    "исчезает",
     "исчезновения",
+    "исчезнуть",
     "каждого",
     "каждому",
+    "карточек",
     "Карточка",
+    "карточке",
     "Карточки",
     "карточку",
     "Карусель",
@@ -166,11 +200,14 @@
     "контейнера",
     "Контейнеры",
     "Контекстные",
+    "Контекстный",
     "контекстных",
     "которая",
     "которое",
     "которой",
     "который",
+    "красивое",
+    "краями",
     "крем",
     "Кроме",
     "крошек",
@@ -185,8 +222,10 @@
     "любой",
     "любым",
     "мгновенно",
+    "между",
     "меню",
     "метки",
+    "Мнения",
     "много",
     "многое",
     "множество",
@@ -195,41 +234,60 @@
     "модальное",
     "Модальные",
     "модальными",
+    "может",
     "можете",
+    "Мокасины",
     "момент",
     "навигации",
     "навигационном",
     "навигацию",
     "Навигация",
+    "навсегда",
+    "Надо",
     "название",
     "назначение",
     "наиболее",
     "налево",
+    "Наложение",
     "например",
     "находится",
     "Начало",
+    "небольшим",
     "небольших",
     "небольшой",
     "него",
+    "неделе",
+    "некоторых",
     "необходимости",
+    "неправильно",
     "нескольким",
+    "несколькими",
     "несколько",
     "неупорядоченные",
+    "ниже",
     "нижний",
     "ними",
     "Новое",
+    "новый",
+    "ноги",
+    "ночи",
     "нумерацией",
     "нумерацию",
+    "обеспечивает",
     "обеспечить",
     "обещает",
     "области",
     "оболочка",
     "образом",
+    "Обратите",
     "объявления",
     "объяснение",
     "обычно",
     "обязательно",
+    "ограничения",
     "один",
+    "одинаковой",
+    "одном",
     "окна",
     "окнами",
     "окне",
@@ -247,15 +305,21 @@
     "остальная",
     "остальному",
     "отдельного",
+    "отдельный",
     "отдельных",
     "Отключение",
     "отключить",
     "Открыть",
     "отметить",
+    "относятся",
     "отношению",
     "отображает",
+    "отображается",
+    "отображать",
     "отображения",
     "отражающим",
+    "отступы",
+    "отчёт",
     "оформлением",
     "оформления",
     "пагинации",
@@ -263,6 +327,7 @@
     "Пагинация",
     "панели",
     "панель",
+    "Парусник",
     "паста",
     "перевернуть",
     "перейти",
@@ -270,17 +335,22 @@
     "Переключать",
     "переключений",
     "переменной",
+    "переместил",
+    "переместить",
     "перескочить",
     "плавного",
     "поведения",
+    "поверх",
     "поддержания",
     "поддержка",
     "Подробнее",
     "Подробное",
     "подходящего",
     "позволяет",
+    "позволяя",
     "Поздравляем",
     "поиска",
+    "пока",
     "показано",
     "показывает",
     "полей",
@@ -298,12 +368,21 @@
     "пользователя",
     "поля",
     "поменять",
+    "поместите",
     "поместить",
+    "помещайте",
     "Понятно",
+    "породит",
+    "поскольку",
+    "после",
     "Последнее",
     "последний",
+    "потребоваться",
+    "Похоже",
+    "почему",
     "почти",
     "поэтому",
+    "появится",
     "появления",
     "правильного",
     "практически",
@@ -311,6 +390,7 @@
     "предлагает",
     "предназначенных",
     "предоставления",
+    "представить",
     "представляющему",
     "предстоит",
     "Предупреждение",
@@ -319,40 +399,56 @@
     "предыдущем",
     "Предыдущий",
     "прежде",
+    "приведённых",
     "придания",
     "придать",
     "примените",
+    "применить",
     "применяет",
+    "применяется",
     "применяются",
     "Пример",
     "примере",
+    "примеров",
     "Примеры",
+    "приятное",
     "проблемах",
     "Прогресс",
     "прогресса",
     "продления",
+    "продолжалось",
     "продолжить",
     "просмотра",
     "простая",
     "Просто",
     "простой",
+    "пространство",
     "процесса",
     "пункт",
     "пункта",
     "работы",
     "раздел",
     "раздела",
+    "разделились",
     "разделители",
     "разделитель",
     "разделителя",
+    "различные",
     "Размер",
     "размерах",
+    "размером",
+    "разместить",
     "размещать",
     "размещения",
     "разработчик",
+    "рамки",
+    "рамкой",
+    "располагался",
+    "расположить",
     "расшифровывается",
     "результатах",
     "результате",
+    "ресурсы",
     "сапог",
     "сапогам",
     "свете",
@@ -362,29 +458,42 @@
     "свойства",
     "Сворачиваемое",
     "свою",
+    "связанный",
+    "связанным",
+    "связано",
     "сделав",
     "Сделайте",
+    "сделал",
     "сделать",
+    "сегодня",
     "семантику",
     "семантического",
     "серии",
     "серым",
+    "Сетка",
     "Сетки",
     "сеток",
     "Система",
     "ситуации",
+    "Скачать",
     "сколько",
+    "скрылось",
     "Следующая",
     "следующее",
+    "следующей",
     "следующие",
     "Следующий",
     "следующим",
     "следующую",
+    "словам",
     "сложные",
     "службы",
+    "случае",
     "Смотрите",
+    "собраны",
     "совпадал",
     "Содержание",
+    "содержимого",
     "содержимое",
     "содержимому",
     "содержимым",
@@ -393,13 +502,19 @@
     "создания",
     "создать",
     "сокращения",
+    "солнц",
+    "Солнце",
+    "Солнцем",
     "сообщить",
+    "соответствовали",
+    "соответствующую",
     "состояние",
     "Сохранить",
     "специального",
     "списков",
     "списку",
     "список",
+    "Спокойной",
     "спонсора",
     "способ",
     "справа",
@@ -423,12 +538,17 @@
     "строке",
     "схему",
     "таблетки",
+    "таблеток",
     "Такая",
     "также",
+    "такие",
     "таких",
     "таком",
+    "тегам",
     "теге",
+    "Текст",
     "текстовой",
+    "текстовому",
     "текстовые",
     "Текущая",
     "текущей",
@@ -440,6 +560,7 @@
     "Типографика",
     "только",
     "туфлям",
+    "тысячи",
     "убрать",
     "уведомление",
     "Уведомления",
@@ -448,33 +569,54 @@
     "увидеть",
     "увязая",
     "Угги",
+    "углам",
     "углы",
     "Удаление",
+    "удалите",
     "удалить",
+    "удаляет",
+    "узнать",
+    "указать",
     "улучшения",
     "уменьшить",
     "умолчанию",
     "управления",
+    "уровне",
     "Успех",
     "успехе",
     "успешно",
     "установить",
     "устройствах",
+    "утверждают",
+    "утилиты",
+    "ушло",
     "фактического",
+    "фиксированной",
     "фирменного",
     "Флекс",
     "флексов",
     "фокус",
+    "фоновое",
+    "фоновые",
+    "Фото",
     "Фрукты",
     "Хлебные",
     "хлебных",
     "ходе",
     "Хорошей",
+    "хорошо",
     "цвета",
     "цветовую",
     "часть",
+    "частью",
+    "чего",
     "читалкам",
     "чтобы",
+    "Ширина",
+    "ширине",
+    "шириной",
+    "ширину",
+    "ширины",
     "шкала",
     "шкале",
     "шкалу",
@@ -484,12 +626,18 @@
     "щёлкает",
     "экрана",
     "экранным",
+    "экспертов",
+    "Эксперты",
     "элемента",
     "элементам",
     "элементе",
     "элементу",
+    "эстетически",
+    "этого",
     "эффект",
     "эффекта",
+    "эффективно",
+    "явно",
     "Borge",
     "brdc",
     "Egil",
