--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "автоматически",
+    "автоматического",
     "Автор",
     "адаптивные",
     "Активное",
@@ -9,7 +10,11 @@
     "атрибут",
     "атрибутом",
     "Базовая",
+    "базовой",
     "базовую",
+    "белое",
+    "белом",
+    "белые",
     "берут",
     "Бесплатная",
     "блеска",
@@ -17,11 +22,13 @@
     "более",
     "больше",
     "больших",
+    "браузеров",
     "Бренд",
     "будет",
     "Было",
     "быть",
     "вариантов",
+    "ваших",
     "ведущую",
     "вернётся",
     "вернулось",
@@ -32,12 +39,17 @@
     "взошло",
     "вида",
     "виде",
+    "видна",
+    "видны",
     "Вкладки",
     "вкладок",
+    "включает",
     "вложенным",
     "вместе",
     "Вместо",
     "внешнего",
+    "внешнему",
+    "внизу",
     "внимание",
     "внутри",
     "внутрь",
@@ -74,6 +86,8 @@
     "Выровнять",
     "выровняться",
     "высотой",
+    "выходить",
+    "выходят",
     "выше",
     "гамбургера",
     "Главная",
@@ -85,6 +99,7 @@
     "группу",
     "Группы",
     "Груши",
+    "дает",
     "даже",
     "дальше",
     "данный",
@@ -93,12 +108,16 @@
     "действия",
     "действовало",
     "делает",
+    "делается",
     "делать",
+    "делаю",
     "диалоговое",
     "диалоговом",
     "Диксон",
     "добавив",
+    "добавил",
     "добавить",
+    "Добавление",
     "добавляемой",
     "добавляет",
     "добавьте",
@@ -109,6 +128,7 @@
     "должны",
     "дополнительной",
     "дополнительную",
+    "дополнительных",
     "доставка",
     "Доступно",
     "доступны",
@@ -118,6 +138,7 @@
     "Если",
     "есть",
     "жидкость",
+    "зависит",
     "завязали",
     "заголовка",
     "заголовке",
@@ -135,8 +156,11 @@
     "Закрыть",
     "Замёрзли",
     "заполняют",
+    "запуска",
     "заставляет",
+    "затем",
     "затемнена",
+    "зачитает",
     "зашло",
     "Здесь",
     "значений",
@@ -144,6 +168,7 @@
     "значков",
     "значок",
     "идеей",
+    "идентификатором",
     "идущего",
     "избавиться",
     "Изменение",
@@ -151,14 +176,20 @@
     "изменить",
     "Изображение",
     "Изображения",
+    "изображениям",
     "Иконки",
     "имена",
     "именно",
+    "иначе",
+    "индикаторов",
+    "индикаторы",
     "Иногда",
     "иного",
     "Инфо",
     "информации",
     "Информационное",
+    "информацию",
+    "иными",
     "использовании",
     "использовать",
     "используемая",
@@ -167,6 +198,7 @@
     "используйте",
     "используя",
     "исчезает",
+    "исчезают",
     "исчезновения",
     "исчезнуть",
     "каждого",
@@ -176,6 +208,7 @@
     "карточке",
     "Карточки",
     "карточку",
+    "карусели",
     "Карусель",
     "качестве",
     "класс",
@@ -185,6 +218,7 @@
     "классом",
     "классы",
     "клиентов",
+    "кликабельные",
     "кнопке",
     "кнопку",
     "кнопок",
@@ -198,13 +232,16 @@
     "конкретной",
     "контейнер",
     "контейнера",
+    "контейнеру",
     "Контейнеры",
+    "контекста",
     "Контекстные",
     "Контекстный",
     "контекстных",
     "которая",
     "которое",
     "которой",
+    "котором",
     "который",
     "красивое",
     "краями",
@@ -221,8 +258,10 @@
     "любое",
     "любой",
     "любым",
+    "маленькие",
     "мгновенно",
     "между",
+    "меньше",
     "меню",
     "метки",
     "Мнения",
@@ -238,12 +277,14 @@
     "можете",
     "Мокасины",
     "момент",
+    "набора",
     "навигации",
     "навигационном",
     "навигацию",
     "Навигация",
     "навсегда",
     "Надо",
+    "назад",
     "название",
     "назначение",
     "наиболее",
@@ -252,12 +293,15 @@
     "например",
     "находится",
     "Начало",
+    "начального",
     "небольшим",
     "небольших",
     "небольшой",
+    "невидимыми",
     "него",
     "неделе",
     "некоторых",
+    "необходимо",
     "необходимости",
     "неправильно",
     "нескольким",
@@ -271,12 +315,16 @@
     "новый",
     "ноги",
     "ночи",
+    "Нужно",
     "нумерацией",
     "нумерацию",
+    "оберните",
     "обеспечивает",
     "обеспечить",
     "обещает",
     "области",
+    "область",
+    "обнаружили",
     "оболочка",
     "образом",
     "Обратите",
@@ -288,13 +336,16 @@
     "один",
     "одинаковой",
     "одном",
+    "одному",
     "окна",
     "окнами",
     "окне",
     "окно",
     "опасности",
     "Опасность",
+    "описал",
     "описание",
+    "описано",
     "определения",
     "определённым",
     "определённых",
@@ -316,6 +367,7 @@
     "отображает",
     "отображается",
     "отображать",
+    "отображаются",
     "отображения",
     "отражающим",
     "отступы",
@@ -334,6 +386,7 @@
     "Переключатель",
     "Переключать",
     "переключений",
+    "перелистывающие",
     "переменной",
     "переместил",
     "переместить",
@@ -343,6 +396,7 @@
     "поверх",
     "поддержания",
     "поддержка",
+    "Подписи",
     "Подробнее",
     "Подробное",
     "подходящего",
@@ -360,6 +414,7 @@
     "Полоски",
     "получает",
     "получается",
+    "получают",
     "Пользователи",
     "пользователь",
     "пользовательским",
@@ -384,9 +439,13 @@
     "поэтому",
     "появится",
     "появления",
+    "появляются",
+    "Пояснение",
     "правильного",
     "практически",
     "пределами",
+    "пределах",
+    "пределы",
     "предлагает",
     "предназначенных",
     "предоставления",
@@ -408,25 +467,36 @@
     "применяется",
     "применяются",
     "Пример",
+    "примерах",
     "примере",
     "примеров",
     "Примеры",
+    "приостанавливаются",
+    "присвойте",
     "приятное",
     "проблемах",
+    "проверьте",
     "Прогресс",
     "прогресса",
     "продления",
     "продолжалось",
     "продолжить",
+    "прокручиваемого",
+    "прокручивать",
+    "прокручивающаяся",
     "просмотра",
     "простая",
     "Просто",
     "простой",
     "пространство",
+    "процентов",
     "процесса",
     "пункт",
     "пункта",
+    "Пятый",
+    "работу",
     "работы",
+    "равный",
     "раздел",
     "раздела",
     "разделились",
@@ -435,6 +505,7 @@
     "разделителя",
     "различные",
     "Размер",
+    "размера",
     "размерах",
     "размером",
     "разместить",
@@ -449,11 +520,15 @@
     "результатах",
     "результате",
     "ресурсы",
+    "руководстве",
+    "самой",
     "сапог",
     "сапогам",
     "свете",
     "Светлое",
     "Светлый",
+    "своём",
+    "своему",
     "свойств",
     "свойства",
     "Сворачиваемое",
@@ -465,6 +540,7 @@
     "Сделайте",
     "сделал",
     "сделать",
+    "себя",
     "сегодня",
     "семантику",
     "семантического",
@@ -477,7 +553,11 @@
     "ситуации",
     "Скачать",
     "сколько",
+    "скроет",
     "скрылось",
+    "слайд",
+    "слайда",
+    "слайдов",
     "Следующая",
     "следующее",
     "следующей",
@@ -486,11 +566,13 @@
     "следующим",
     "следующую",
     "словам",
+    "словами",
     "сложные",
     "службы",
     "случае",
     "Смотрите",
     "собраны",
+    "собственным",
     "совпадал",
     "Содержание",
     "содержимого",
@@ -507,6 +589,7 @@
     "Солнцем",
     "сообщить",
     "соответствовали",
+    "соответствующие",
     "соответствующую",
     "состояние",
     "Сохранить",
@@ -526,6 +609,8 @@
     "ссылку",
     "ссылок",
     "стандартную",
+    "становиться",
+    "стартового",
     "Статичный",
     "стилизацией",
     "стилизованного",
@@ -536,6 +621,7 @@
     "страницу",
     "страницы",
     "строке",
+    "сути",
     "схему",
     "таблетки",
     "таблеток",
@@ -559,6 +645,7 @@
     "типа",
     "Типографика",
     "только",
+    "Третий",
     "туфлям",
     "тысячи",
     "убрать",
@@ -581,6 +668,7 @@
     "уменьшить",
     "умолчанию",
     "управления",
+    "управляет",
     "уровне",
     "Успех",
     "успехе",
@@ -607,11 +695,17 @@
     "хорошо",
     "цвета",
     "цветовую",
+    "центру",
+    "частности",
     "часть",
     "частью",
     "чего",
+    "Четвёртый",
     "читалкам",
+    "читалками",
+    "читалках",
     "чтобы",
+    "Шестой",
     "Ширина",
     "ширине",
     "шириной",
@@ -626,14 +720,19 @@
     "щёлкает",
     "экрана",
     "экранным",
+    "экранными",
+    "экранных",
     "экспертов",
     "Эксперты",
     "элемента",
     "элементам",
+    "элементами",
     "элементе",
     "элементу",
     "эстетически",
+    "этих",
     "этого",
+    "Этот",
     "эффект",
     "эффекта",
     "эффективно",
